# AAUSAT6-vision

./: .clang-format  .clang-tidy  .cppcheck-suppressions  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  lint.yml
config/: default.yaml
config/experiments/: input_naitsa.yaml  input_slessing.yaml  input_test.yaml  naitsa.yaml  naive.yaml  orb_only.yaml
config/experiments/Final-testing-configs/: Max-efficiency.yaml  Max-quality.yaml  opt-300-11-2.yaml  opt-300-11-3.yaml  opt-300-21-2.yaml  opt-300-21-3.yaml  opt-300-31-3.yaml  opt-300-31-4.yaml  opt-300-41-4.yaml  opt-300-41-5.yaml  opt-400-11-2.yaml  opt-400-11-3.yaml  opt-400-21-2.yaml  opt-400-21-3.yaml  opt-400-31-3.yaml  opt-400-31-4.yaml  opt-400-41-4.yaml  opt-400-41-5.yaml  opt-500-11-2.yaml  opt-500-11-3.yaml  opt-500-21-2.yaml  opt-500-21-3.yaml  opt-500-31-3.yaml  opt-500-31-4.yaml  opt-500-41-4.yaml  opt-500-41-5.yaml  orb-1000-120.yaml  orb-1000-300.yaml  orb-1000-60.yaml  orb-300-120.yaml  orb-300-300.yaml  orb-300-60.yaml  orb-400-120.yaml  orb-400-300.yaml  orb-400-60.yaml  orb-500-120.yaml  orb-500-300.yaml  orb-500-60.yaml  stab-3-005-1000.yaml  stab-3-005-2000.yaml  (+25 more)
config/experiments/final-testing-configs/: Max-efficiency.yaml  Max-quality.yaml  opt-300-11-2.yaml  opt-300-11-3.yaml  opt-300-21-2.yaml  opt-300-21-3.yaml  opt-300-31-3.yaml  opt-300-31-4.yaml  opt-300-41-4.yaml  opt-300-41-5.yaml  opt-400-11-2.yaml  opt-400-11-3.yaml  opt-400-21-2.yaml  opt-400-21-3.yaml  opt-400-31-3.yaml  opt-400-31-4.yaml  opt-400-41-4.yaml  opt-400-41-5.yaml  opt-500-11-2.yaml  opt-500-11-3.yaml  opt-500-21-2.yaml  opt-500-21-3.yaml  opt-500-31-3.yaml  opt-500-31-4.yaml  opt-500-41-4.yaml  opt-500-41-5.yaml  orb-1000-120.yaml  orb-1000-300.yaml  orb-1000-60.yaml  orb-300-120.yaml  orb-300-300.yaml  orb-300-60.yaml  orb-400-120.yaml  orb-400-300.yaml  orb-500-120.yaml  orb-500-300.yaml  orb-500-60.yaml  stab-3-005-1000.yaml  stab-3-005-2000.yaml  stab-3-005-500.yaml  (+24 more)
docs/: dirs-vision.md
scripts/: build.sh
src/: CMakeLists.txt  main.cpp
src/pipeline/: framecontext.hpp  pipeline.cpp  pipeline.hpp  router.cpp  router.hpp  stage.hpp  threadedstage.cpp  threadedstage.hpp
src/pipeline/stages/: capture_stage.hpp  orb_stage.cpp
src/stages/: capture_stage.hpp  ed_ransac_stage.hpp  optical_flow_stage.hpp  orb_stage.cpp  orb_stage.hpp  output_stage.hpp  pose_stage.hpp  post_stage.cpp  stabilizer_stage.hpp  warp_apply_stage.hpp
src/utils/: config.hpp  picture_db.cpp  picture_db.hpp  telemetry_logger.cpp  telemetry_logger.hpp  threadsafequeue.hpp
tests/: CMakeLists.txt
